display challenge exercise

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -17,6 +17,14 @@
 </head>
 <body>
 <!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+<div class="top">
+  <span></span>
+  <span></span>
+</div>
+<div class="bottom">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
 </body>
 </html>
