add viewport info for responsiveness on devices
Forgot to add this in the initial commit

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>CSS Layout Exercises | display property</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8" name="description" content="Layout exercise on `display` property for Thinkful's front end web development course">
 
   <!-- fonts  -->
