--- a/position-exercise.html
+++ b/position-exercise.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>CSS Layout Exercises | position property</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8" name="description" content="Layout exercise on `position` property for Thinkful's front end web development course">
 
   <!-- fonts  -->
@@ -29,6 +30,10 @@
 
   <main>
     <!-- Put the HTML you need to accomplish the design -->
+    <div class="catbox">
+      <img class="cat" src="images/spacecat.png" alt="Space Cat" />
+      <img class="dog" src="images/spacedog.png" alt="Space Dog" />
+    </div>
   </main>
 </body>
 </html>
